--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TODO：基于Canvas的Charts实现",
   "main": "webpack.dev.config.js",
   "dependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
