--- a/package.json
+++ b/package.json
@@ -4,13 +4,36 @@
   "description": "TODO：基于Canvas的Charts实现",
   "main": "webpack.dev.config.js",
   "dependencies": {
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
     "clean-webpack-plugin": "^3.0.0",
+    "cra-template": "1.0.3",
     "html-webpack-plugin": "^4.5.0",
+    "react": "^17.0.1",
+    "react-dom": "^16.14.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts-ts": "3.1.0",
+    "remove-drag-ghosting": "^1.0.4",
+    "tapable": "^1.1.3",
+    "tslint": "^6.1.2",
+    "url-loader": "^4.1.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "webpack": "^5.3.0"
+    "awesome-typescript-loader": "^5.2.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "parcel-bundler": "^1.7.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "source-map-loader": "^1.0.1",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "dev": "webpack serve --config ./webpack.dev.conf.js",
