--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "chunk-change-time-webpack-plugin": "^1.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "cra-template": "1.0.3",
     "html-webpack-plugin": "^4.5.0",
