--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "babel-preset-es2015": "^6.24.1",
     "chunk-change-time-webpack-plugin": "^1.0.4",
     "clean-webpack-plugin": "^3.0.0",
     "cra-template": "1.0.3",
