--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cra-template": "1.0.3",
     "html-webpack-plugin": "^4.5.0",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^16.14.0",
     "react-router": "^5.2.0",
@@ -34,7 +35,9 @@
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "happypack": "^5.0.1",
+    "loadsh": "0.0.4",
     "parcel-bundler": "^1.7.1",
+    "react-lodash": "^0.1.2",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "source-map-loader": "^1.0.1",
