--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "webpack --config ./webpack.prod.conf.js"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.168",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
