update tsconfig png导入问题出来

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
       "allowUnreachableCode": true
     },
     "include":[ 
-        "./src/**/*"
+        "./src/**/*",
+        "./imgs.d.ts"
     ],
     "exclude": [
       "node_modules",
