--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "cra-template": "1.0.3",
     "html-webpack-plugin": "^4.5.0",
     "lodash": "^4.17.20",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "react": "^17.0.1",
     "react-dom": "^16.14.0",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts-ts": "3.1.0",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "remove-drag-ghosting": "^1.0.4",
     "tapable": "^1.1.3",
     "tslint": "^6.1.2",
