--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^3.0.0",
     "cra-template": "1.0.3",
-    "html-webpack-plugin": "^4.5.0",
     "lodash": "^4.17.20",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
@@ -33,14 +33,14 @@
     "tapable": "^1.1.3",
     "tslint": "^6.1.2",
     "url-loader": "^4.1.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.69.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "chunk-change-time-webpack-plugin": "^1.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "happypack": "^5.0.1",
+    "html-webpack-plugin": "^5.5.0",
     "loadsh": "0.0.4",
     "parcel-bundler": "^1.7.1",
     "react-lodash": "^0.1.2",
@@ -48,9 +48,8 @@
     "sass-loader": "^9.0.2",
     "source-map-loader": "^1.0.1",
     "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "repository": {
     "type": "git",
